# procman

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bug.pman  flow.md  pman-dsl-design.md
.github/workflows/: mdbook.yml
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  configuration.md  dependencies.md  dynamic.md  fan-out.md  getting-started.md  introduction.md  language-design.md  logging.md  shutdown.md  templates.md
docs/superpowers/plans/: 2026-03-24-pman-dsl.md
docs/superpowers/specs/: 2026-03-24-pman-dsl-design.md
examples/: tasks.pman
src/: args.rs  checks.rs  command_parser.rs  config.rs  config_parser.rs  dependency.rs  fifo.rs  fifo_path.rs  log.rs  main.rs  output.rs  output_match.rs  pman.rs  process.rs  procfile.rs  procfile_yaml.rs  signal.rs  watch.rs
src/pman/: ast.rs  expr.rs  lexer.rs  loader.rs  lower.rs  parser.rs  token.rs  validate.rs
