[package]
name = "procman"
version = "0.5.0"
edition = "2024"
description = "A foreman-like process supervisor"
license = "MIT"
repository = "https://github.com/wbbradley/procman"
readme = "README.md"
keywords = ["process", "supervisor", "yaml", "foreman"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
nix = { version = "0.31.2", features = ["signal", "process", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shell-words = "1.1.1"
signal-hook = "0.4.3"
ureq = "3.2.0"
