[package]
name = "procman"
version = "0.10.0"
edition = "2024"
description = "A foreman-like process supervisor"
license = "MIT"
repository = "https://github.com/wbbradley/procman"
readme = "README.md"
keywords = ["process", "supervisor", "yaml", "foreman"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3.3"
nix = { version = "0.31.2", features = ["signal", "process", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
serde_yaml = "0.9.34"
shell-words = "1.1.1"
signal-hook = "0.4.3"
ureq = "3.2.0"
